# blueking-paas

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  ChangeLog.md  LICENSE.txt  License.txt  README.md  README_EN.md  bkpkg-bkpaas-app-operator.yaml  bkpkg-bkpaas3.yaml  pyproject.toml  readme_en.md
.preci/: devfile.yaml
apiserver/: .babelrc  .bootstraprc  .dockerignore  .eslintrc.js  .flake8  .git-blame-ignore-revs  .jsbeautifyrc  .pylintrc  AGENTS.md  Dockerfile  Makefile  README.md  dev-init.sh  encryption_migration.sh  init.sh  mypy.ini  package.json  postcss.config.js  pyproject.toml  start.sh  start_admin42.sh  start_celery.sh
apiserver/.github/instructions/: default.instructions.md
apiserver/configs/: utils.js  webpack.config.js
apiserver/design_notes/: agent_sandbox_phase1.md  s-mart-app-desc.md
apiserver/dev_utils/bundle/: README.md  docker-compose.yml  start.sh
apiserver/dev_utils/unittest/: Dockerfile.devops.unittest  docker-compose.without-apiserver.yaml  docker-compose.yml  start-kind.sh
apiserver/dev_utils/unittest/kind-configs/: 114.yaml  116.yaml  118.yaml  120.yaml  122.yaml  README.md
apiserver/paasng/: .coveragerc  .importlinter  Makefile  RELEASE.md  conf.yaml.tpl  manage.py  paas_wl  pytest.ini
apiserver/paasng/assets/javascripts/: i18n.js  index.js
apiserver/paasng/changelog/en/: V0.0.1_2022-11-17.md  V0.1.0_2022-11-17.md  V0.1.4_2023-03-20.md  V1.1.0_2023-05-17.md  V1.2.0_2023-08-14.md  V1.2.1_2023-09-18.md  V1.3.0_2023-09-20.md  V1.4.1_2024-05-15.md  V1.5.0_2024-06-21.md  V1.6.0_2024-12-24.md  V1.6.0_2025-10-10.md
apiserver/paasng/changelog/zh-cn/: V0.1.0_2022-11-17.md  V0.1.4_2023-03-20.md  V1.1.0_2023-05-17.md  V1.2.0_2023-08-14.md  V1.2.1_2023-09-18.md  V1.3.0_2023-09-20.md  V1.4.1_2024-05-15.md  V1.5.0_2024-06-21.md  V1.6.0_2024-12-24.md  V1.6.0_2025-10-10.md
apiserver/paasng/data/apigw/: definition.yaml
apiserver/paasng/fixtures/: accounts.yaml  services.yaml  smart_advisor.yaml  step_meta.yaml  template.yaml
apiserver/paasng/paas_wl/: __init__.py  celery.py  urls.py
apiserver/paasng/paas_wl/admin/: constants.py  helpers.py  urls.py
apiserver/paasng/paas_wl/cluster/: __init__.py  constants.py  loaders.py  models.py  serializers.py  shim.py  utils.py
apiserver/paasng/paas_wl/core/: app_structure.py  env.py  resource.py  signals.py
apiserver/paasng/paas_wl/deploy/: __init__.py  apps.py  processes.py
apiserver/paasng/paas_wl/metrics/: authentication.py  views.py
apiserver/paasng/paas_wl/networking/: api.py  constants.py
apiserver/paasng/paas_wl/platform/: api.py
apiserver/paasng/paas_wl/release_controller/: api.py  constants.py  models.py
apiserver/paasng/paas_wl/resources/: tasks.py
apiserver/paasng/paas_wl/settings/: __init__.py  utils.py
apiserver/paasng/paas_wl/tracing/: __init__.py  middlewares.py
apiserver/paasng/paas_wl/utils/: basic.py  blobstore.py  camel_converter.py  command.py  constants.py  dns.py  env_vars.py  error_codes.py  kubestatus.py  models.py  termcolors.py  text.py  tracing.py  views.py
apiserver/paasng/paasng/: __init__.py  celery.py  urls.py  wsgi.py
apiserver/paasng/paasng/accessories/: __init__.py  serializers.py  urls.py  views.py
apiserver/paasng/paasng/accounts/: __init__.py  admin.py  apps.py  constants.py  middlewares.py  models.py  serializers.py  urls.py  utils.py  views.py
apiserver/paasng/paasng/anti_contracts/: __init__.py
apiserver/paasng/tests/: .gitignore  conftest.py  test_oauth2.py  test_settings.py  test_sqlalchemy_transaction.py
svc-bkrepo/: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  start.sh
svc-bkrepo/static/css/: bk-magic-vue.min.css  index.css
svc-bkrepo/static/js/: humanize.min.js
svc-bkrepo/svc_bk_repo/: middleware.py  urls.py  wsgi.py
svc-bkrepo/svc_bk_repo/monitoring/: apps.py  jobs.py  metrics.py  models.py  signals.py
svc-bkrepo/svc_bk_repo/settings/: __init__.py  default.py
svc-bkrepo/svc_bk_repo/shared/: scheduler.py
svc-bkrepo/svc_bk_repo/templates/: 404.html  base.html  index.html
svc-bkrepo/test/: __init__.py  settings.py  test_jobs.py
svc-mysql/: Dockerfile  README.md  manage.py  pyproject.toml  start.sh
svc-mysql/static/css/: bk-magic-vue.min.css
svc-mysql/static/js/: bk-magic-vue.js  vue-2.5.22.js
svc-mysql/svc_mysql/: middleware.py  urls.py  wsgi.py
svc-mysql/svc_mysql/settings/: __init__.py  default.py
svc-mysql/svc_mysql/templates/: 404.html  base.html  index.html
svc-mysql/tests/: test_provider.py  test_utils.py
svc-otel/: .gitignore  Dockerfile  README.md  manage.py  migrate.sh  pyproject.toml  start.sh  values-template.yaml
svc-otel/data/fixtures/: plans.json  service.json
svc-otel/svc_otel/: middleware.py  urls.py  wsgi.py
svc-otel/svc_otel/bk_monitor/: client.py
svc-otel/svc_otel/bkmonitorv3/: client.py  exceptions.py
svc-otel/svc_otel/settings/: __init__.py  default.py
svc-otel/svc_otel/templates/: 404.html
svc-rabbitmq/: Dockerfile  Makefile  README.md  manage.py  migrate.sh  pyproject.toml  start.sh
svc-rabbitmq/data/fixtures/: default.json
svc-rabbitmq/docs/: database.er
svc-rabbitmq/monitor/: apps.py  urls.py  views.py
svc-rabbitmq/svc_rabbitmq/: log.py  middleware.py  redis.py  urls.py  utils.py  wsgi.py
svc-rabbitmq/svc_rabbitmq/settings/: __init__.py  current.py
svc-rabbitmq/tasks/: __init__.py  admin.py  apps.py  helper.py  models.py  monitor.py  scheduler.py  tasks.py
svc-rabbitmq/tasks/migrations/: 0001_initial.py
svc-rabbitmq/templates/: 404.html
svc-rabbitmq/tests/: conftest.py  test_provider.py  test_provider_plugins.py
workloads/: .dockerignore  .flake8  Dockerfile  README.md  mypy.ini  pyproject.toml
workloads/dev_utils/eng_bundle/: README.md  docker-compose.yaml  start.sh
workloads/dev_utils/unittest/: Dockerfile.devops.unittest  README.md  docker-compose.without-apiserver.yaml  docker-compose.yaml  start-kind.sh
workloads/paas_wl/: conf.yaml.tpl  manage.py  pytest.ini
workloads/paas_wl/paas_wl/: __init__.py  celery.py  urls.py  wsgi.py
workloads/paas_wl/tests/: conftest.py  test_settings.py  test_utils.py
(+6709 files in other folders)
