[tool.poetry]
name = "Blueking PaaS"
version = "1.0.0"
description = "Tencent Blueking PaaS platform(https://bk.tencent.com/)"
authors = ["blueking <blueking@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"

[tool.poetry.dev-dependencies]
# Essential tools to format source codes, required when using pre-commit
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
  | .*/migrations
  | .*/node_modules
  | .*/paasng/platform/mgrlegacy/data
  | .*/tests/platform/mgrlegacy/assets
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
skip_glob = ["*/migrations/**", "*/node_modules/**"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = [
  "paas_wl",
  "tests",
  "paasng"
]

[tool.flake8]
ignore = "C901,F405,F403,W504,E741,E125,W503,F841,E203,E231,C408,C403,C407,C401,E402"
max-line-length = 119
max-complexity = 8
format = "pylint"
exclude = '''
    *.pyc,
    .git,
    __pycache__,
    *migrations*,
    */node_modules/*,
    */bin/*,
    */templates_module*,
'''
show_source = "true"
statistics = "true"
count = "true"
