[tool.poetry]
name = "Blueking PaaS"
version = "1.0.0"
description = "Tencent Blueking PaaS platform(https://bk.tencent.com/)"
authors = ["blueking <blueking@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"

[tool.poetry.dev-dependencies]
# Essential tools to format source codes, required when using pre-commit
black = "==23.1.0"
isort = "==5.12.0"
flake8 = "==6.0.0"
flake8-bugbear = "==23.1.20"
flake8-comprehensions = "==3.10.1"
flake8-pie = "==0.16.0"

[tool.black]
skip-string-normalization = 'true'
line-length = 119
exclude = '''
/(
  | .*/migrations
  | .*/node_modules
  | .*/paasng/platform/mgrlegacy/data
  | .*/tests/platform/mgrlegacy/assets
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip_glob = ["*/migrations/**", "*/node_modules/**"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = [
  "paas_wl",
  "tests",
  "paasng"
]
