[project]
name = "apiserver"
description = "Tencent Blueking PaaS Platform"
version = "0.0.1"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
requires-python = '>=3.11,<3.12'
dependencies = [
  'aenum (==3.1.15)',
  'apscheduler (==3.6.0)',
  'arrow (==1.3.0)',
  'bk-iam (==2.0.2)',
  'bkpaas-auth (==3.1.2)',
  'apigw-manager (==4.0.1)',
  'bkstorages (==2.0.0)',
  'bleach (==3.3.0)',
  "blue-krill (==2.1.2)",
  'bkapi-component-open (==1.1.0)',
  'boto (==2.49.0)',
  'boto3 (==1.33.13)',
  'botocore (==1.33.13)',
  'celery (==5.4.0)',
  'chardet (==3.0.4)',
  'click (==8.1.7)',
  'cryptography (==43.0.3)',
  'curlify (==2.2.1)',
  'dataclasses (==0.7) ; python_full_version >= "3.6.2" and python_version < "3.7"',
  'dj-static (==0.0.6)',
  'django (==4.2.23)',
  'django-bootstrap3 (==21.2)',
  'django-cors-headers (==4.5.0)',
  'django-dynamic-fixture (==3.1.2)',
  'django-filter (==22.1)',
  'django-imagekit (==5.0.0)',
  'django-redis (==5.4.0)',
  'django-webpack-loader (==0.5.0)',
  'djangorestframework (==3.15.2)',
  'django-prometheus (==2.2.0)',
  'dogpile.cache (==1.1.6)',
  'drf-yasg (==1.21.7)',
  'elasticsearch (==7.17.12)',
  'elasticsearch-dsl (>=7.0.0,<8.0.0)',
  'future (==1.0.0)',
  'gevent (==24.2.1)',
  'gunicorn (==23.0.0)',
  'grpcio (==1.68.0)',
  'jinja2 (==3.1.4)',
  'jsonfield (==3.1.0)',
  'markdown (==3.6)',
  'msgpack (==1.0.4)',
  'mypy-extensions (==0.4.3)',
  'pymysql (==1.1.1)',
  'markupsafe (==2.1.5)',
  'oauthlib (==2.1.0)',
  'prometheus-client (==0.9.0)',
  'pydantic (==1.10.15)',
  'pyjwt (==2.4.0)',
  'python-etcd (==0.4.5)',
  'python-gitlab (==1.6.0)',
  'python-logstash (==0.4.6)',
  'pyyaml (==6.0.1)',
  'packaging (==24.0)',
  'redis (==3.5.3)',
  'requests (==2.32.3)',
  'requests-oauthlib (==1.0.0)',
  'sentry-sdk (==0.19.4)',
  'sqlalchemy (==1.4.52)',
  'svn (==0.3.44)',
  'typing-extensions (==4.11.0)',
  'tzlocal (==2.1)',
  'unipath (==1.1)',
  'werkzeug (==3.0.6)',
  'whitenoise (==5.3.0)',
  'wrapt (==1.15.0)',
  'xlwt (==1.3.0)',
  'django-revproxy (==0.10.0)',
  'www-authenticate (>=0.9.2,<0.10.0)',
  'bkapi-bk-apigateway (==1.0.11)',
  'moby-distribution (==0.8.2)',
  'pillow (==10.3.0)',
  'cattrs (==1.10.0)',
  'attrs (==22.1.0)',
  'django-translated-fields (>=0.12.0,<0.13.0)',
  'dynaconf (>=3.1.8,<4.0.0)',
  'opentelemetry-api (==1.24.0)',
  'opentelemetry-sdk (==1.24.0)',
  'opentelemetry-exporter-otlp (==1.24.0)',
  'opentelemetry-instrumentation-django (==0.45b0)',
  'opentelemetry-instrumentation-dbapi (==0.45b0)',
  'opentelemetry-instrumentation-redis (==0.45b0)',
  'opentelemetry-instrumentation-requests (==0.45b0)',
  'opentelemetry-instrumentation-logging (==0.45b0)',
  'opentelemetry-instrumentation-celery (==0.45b0)',
  'cookiecutter (>=2.1.1,<3.0.0)',
  'semver (>=2.13.0,<3.0.0)',
  'protobuf (>=3.15.0,<4)',
  'kubernetes (==24.2.0)',
  'bk-notice-sdk (==1.3.2)',
  'urllib3 (==1.26.20)',
  'python-json-logger (>=2.0.7,<3.0.0)',
  'concurrent-log-handler (>=0.9.25,<0.10.0)',
  'humanize (==4.9.0)',
  'bk-audit (==1.2.3b0)',
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
filelock = "*"
mypy = "1.0.0"
pytest = "6.2.5"
pytest-xdist = "3.3.1"
pytest-cov = "*"
pytest-django = "4.5.2"
pytest-mock = "3.2.0"
types-pyyaml = "^5"
types-redis = "^4.1.18"
types-dataclasses = "^0.6.4"
types-pytz = "^2021.3.6"
types-requests = "^2.27.15"
types-six = "^1.16.12"
types-bleach = "^4.1.5"
types-pymysql = "^1.0.14"
types-chardet = "^4.0.3"
types-python-dateutil = "^2.8.10"
import-linter = "1.12.0"
requests-mock = "*"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
exclude = [
  '^paasng/ee/.*$',
  '^paasng/te/.*$',
  '^paasng/paas_settings_ieod/.*$',
  '^paasng/paas_settings_ee/.*$',
  '^paasng/paasng/platform/mgrlegacy/data/.*$',
  '^paasng/tests/paasng/platform/mgrlegacy/.*$',
  '^paasng/paasng/plat_admin/bk_data/management/commands/report_user_app_relationships.py$',
]

[[tool.mypy.overrides]]
module = "mypy-paasng.settings.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.platform.mgrlegacy.assets.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true
