[tool.poetry]
name = "svc-bkrepo"
version = "1.0.0"
description = ""
authors = ["blueking <blueking@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cryptography = "42.0.5"
django = "3.2.25"
djangorestframework = "3.12.4"
gevent = "24.2.1"
gunicorn = "20.1.0"
prometheus-client = "0.14.1"
pymysql = "1.0.2"
requests = "2.31.0"
jsonfield = "=3.1.0"
whitenoise = "5.3.0"
sentry_sdk = "0.19.4"
paas-service = "1.1.6"
blue-krill = "2.0.3"
pydantic = "1.10.15"
bkpaas_auth = ">=2.0.2"
curlify = "^2.2.1"
django-environ = "0.8.1"
apscheduler = "^3.9.1"
filelock = "^3.7.1"
urllib3 = "1.26.18"
pyjwt = "2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
ipython = "*"
pytest = "*"
pytest-django = "*"
requests-mock = "==1.5.2"

[[tool.poetry.source]]
url = "https://mirrors.tencent.com/pypi/simple/"
name = "pypi-tencent-mirror"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
    .*/migrations/.*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
