[tool.poetry]
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
ipython = "*"
pytest = "*"
pytest-django = "*"
requests-mock = "==1.5.2"

[[tool.poetry.source]]
name = "pypi-tencent-mirror"
url = "https://mirrors.tencent.com/pypi/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
    .*/migrations/.*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119

[project]
name = "svc-bkrepo"
description = ""
# classifieres is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
authors = [{name = "blueking", email = "blueking@tencent.com"}]
requires-python = '>=3.11,<3.15'
dependencies = [
    'django (==5.2.15)',
    'pymysql (==1.1.1)',
    "gunicorn (==23.0.0)",
    "paas-service (==3.1.0)",
    'djangorestframework (==3.17.1)',
    'requests (==2.32.3)',
    'gevent (==26.5.0)',
    'cryptography (==46.0.6)',
    'jsonfield (==3.2.0)',
    'whitenoise (==6.12.0)',
    'sentry_sdk (==0.19.4)',
    'blue-krill (==3.1.1)',
    'bkpaas-auth (==4.1.0)',
    'prometheus-client (==0.14.1)',
    "pydantic (==2.12.5)",
    'curlify (==2.2.1)',
    'django-environ (==0.14.0)',
    'apscheduler (==3.11.0)',
    'filelock (==3.18.0)',
    'urllib3 (==1.26.20)',
    'pyjwt (==2.12.0)'
]
