[tool.poetry]
name = "svc_mysql"
version = "1.0.0"
description = ""
authors = ["blueking <blueking@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "4.2.17"
pymysql = "1.1.1"
gunicorn = "22.0.0"
paas-service = "2.0.1"
djangorestframework = "3.15.2"
requests = "2.32.3"
gevent = "24.2.1"
cryptography = "43.0.3"
jsonfield = "3.1.0"
whitenoise = "5.3.0"
sentry_sdk = "0.19.4"
blue-krill = "2.0.7"
prometheus-client = "0.14.1"
pydantic = "1.10.15"
django-environ = "0.8.1"
urllib3 = "1.26.20"
pyjwt = "2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
ipython = "*"
pytest = "*"
pytest-django = "*"
requests-mock = "==1.5.2"

[[tool.poetry.source]]
name = "pypi-tencent-mirror"
url = "https://mirrors.tencent.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
