[tool.poetry]
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
ipython = "*"
pytest = "*"
pytest-django = "*"
requests-mock = "==1.5.2"

[[tool.poetry.source]]
name = "pypi-tencent-mirror"
url = "https://mirrors.tencent.com/pypi/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "svc_mysql"
description = ""
# classifieres is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
authors = [{name = "blueking", email = "blueking@tencent.com"}]
requires-python = '>=3.11,<3.12'
dependencies = [
    'django (==4.2.17)',
    'pymysql (==1.1.1)',
    "gunicorn (==23.0.0)",
    "paas-service (==2.0.3)",
    'djangorestframework (==3.15.2)',
    'requests (==2.32.3)',
    'gevent (==24.2.1)',
    'cryptography (==43.0.3)',
    'jsonfield (==3.1.0)',
    'whitenoise (==5.3.0)',
    'sentry_sdk (==0.19.4)',
    'blue-krill (==2.0.7)',
    'prometheus-client (==0.14.1)',
    "pydantic (==2.9.2)",
    'django-environ (==0.8.1)',
    'urllib3 (==1.26.20)',
    'pyjwt (==2.4.0)'
]
