[tool.poetry]
name = "svc-otel"
version = "0.1.0"
description = ""
authors = ["blueking <blueking@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
cryptography = ">=3.0.0,<4.0.0"
django = "==3.2.12"
djangorestframework = "==3.12.4"
gevent = "==21.12.0"
gunicorn = "==20.1.0"
prometheus-client = "==0.6.0"
pymysql = "==1.0.2"
requests = "==2.21.0"
jsonfield = "==3.1.0"
whitenoise = "==5.3.0"
sentry_sdk = "*"
paas-service = "==1.1.4"
blue-krill = ">=1.0.15"
django-environ = "^0.4.5"
bkapi-client-core = ">=1.1.0,<2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
ipython = "*"
pytest = "*"
pytest-django = "*"
requests-mock = "==1.5.2"

[[tool.poetry.source]]
url = "https://mirrors.tencent.com/pypi/simple/"
name = "pypi-tencent-mirror"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
    .*/migrations/.*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
