[tool.poetry]
name = "svc-otel"
version = "0.1.0"
description = ""
authors = ["blueking <blueking@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "4.2.17"
pymysql = "1.1.1"
gunicorn = "22.0.0"
paas-service = "2.0.0"
djangorestframework = "3.15.2"
requests = "2.32.3"
gevent = "24.2.1"
cryptography = "43.0.3"
jsonfield = "3.1.0"
whitenoise = "5.3.0"
sentry_sdk = "0.19.4"
blue-krill = "2.0.7"
prometheus-client = "0.14.1"
bkapi-client-core = ">=1.1.0,<2.0.0"
django-environ = "0.8.1"
urllib3 = "1.26.20"
pyjwt = "2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
ipython = "*"
pytest = "*"
pytest-django = "*"
requests-mock = "==1.5.2"

[[tool.poetry.source]]
url = "https://mirrors.tencent.com/pypi/simple/"
name = "pypi-tencent-mirror"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
    .*/migrations/.*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
